--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,46 +1,71 @@
-version: 2.1
+version: 
+2.1
 orbs:
-  datacamp-ecr: datacamp/ecr@1
-  datacamp-deploy: datacamp/deploy@2
-  queue: eddiewebb/queue@1.7.0
-  datacamp-deploy-branch: datacamp/deploy-branch@1
-  datacamp-artifactory: datacamp/artifactory@1
+  datacamp-ecr: 
+  datacamp/ecr@1
+  datacamp-deploy: 
+  datacamp/deploy@2
+  queue: 
+  eddiewebb/queue@1.7.0
+  datacamp-deploy-branch: 
+  datacamp/deploy-branch@1
+  datacamp-artifactory: 
+  datacamp/artifactory@1
 workflows:
   version: 2
 
-  # BEGIN ANSIBLE MANAGED BLOCK
+  BEGIN ANSIBLE MANAGED BLOCK
   build-and-deploy-eks:
     jobs:
       - queue/block_workflow:
-          name: queue
-          context: org-global
-          time: '10'
+          name:
+          queue
+          context: 
+          org-global
+          time: 
+          '10'
           filters:
             branches:
               ignore:
-                - /backstage\/.*/
+              /backstage\/.*/
 
-      - datacamp-artifactory/build_and_push_image_to_artifactory: &dockerBuild
-          name: docker-build
-          context: org-global
-          dockerfile: Dockerfile
-          docker-version: "20.10.2"
-          extra-docker-args: "--build-arg VERSION=$(git describe --tags)"
-          repo: rdoc-r-worker
-          executor: datacamp-artifactory/buildkit
-          git_tag_filter: '--match "[0-9]*.[0-9]*.[0-9]*"'
+      datacamp-artifactory/build_and_push_image_to_artifactory: &dockerBuild
+          name:
+          docker-build
+          context: 
+          org-global
+          dockerfile:
+          Dockerfile
+          docker-version:
+          "20.10.2"
+          extra-docker-args: 
+          "-build-arg VERSION=$(git describe --tags)"
+          repo: 
+          rdoc-r-worker
+          executor:
+          datacamp-artifactory/buildkit
+          git_tag_filter: 
+          '-match "[0-9]*.[0-9]*.[0-9]*"'
           pre-build-steps:
             - run:
-                name: Build application docker image
-                command: |
-                  docker login -p ${DOCKERHUB_PASSWORD} -u ${DOCKERHUB_USER} dockerhub.datacamp.com:443
+                name: 
+                Build application docker image
+                command:
+                |
+  "docker login 
+  "-p ${DOCKERHUB_PASSWORD}
+  "-u ${DOCKERHUB_USER}
+  "dockerhub.datacamp.com:443
           requires:
-           - queue
+           queue
 
       - datacamp-artifactory/tag_repository:
-          name: tag
-          context: org-global
-          git_tag_filter: '--match "[0-9]*.[0-9]*.[0-9]*"'
+          name: 
+          tag
+          context: 
+          org-global
+          git_tag_filter: 
+          '--match "[0-9]*.[0-9]*.[0-9]*"'
           requires:
             - docker-build
             - queue
@@ -51,9 +76,12 @@ workflows:
   deploy-backstage:
     jobs:
       - datacamp-artifactory/build_and_push_image_to_artifactory:
-          name: docker-build
-          context: org-global
-          dockerfile: Dockerfile
+          name: 
+          docker-build
+          context: 
+          org-global
+          dockerfile:
+          Dockerfile
           docker-version: "20.10.2"
           extra-docker-args: "--build-arg VERSION=$(git describe --tags)"
           repo: rdoc-r-worker
